# bg_randomized_loce

./: LICENSE  README.md  pyproject.toml
bg_randomized_loce/background_pasting/: background_pasting.py  voronoi_shuffling.py
bg_randomized_loce/data_structures/: caching.py  datasets.py  folder_classification_datasets.py  imagenet.py  imagenet_labels.py  mscoco.py  semantic_segmenter.py
bg_randomized_loce/hooks/: __init__.py  hooks.py  propagator.py  propagator_huggingface_detr.py  propagator_torch_classifier.py  propagator_torch_detector.py  propagator_torch_ssd.py  propagator_ultralytics_yolo_old.py
bg_randomized_loce/loce/: __init__.py  loce.py  loce_optimizer.py  loce_utils.py
bg_randomized_loce/synthetic_bg_generation/: __init__.py  background_generators.py  concept_inserter.py  constants.py  diffuser_exact_requirements.txt
bg_randomized_loce/utils/: consts.py  eval_util.py  files.py  loce_storage_helpers.py  logging.py
experiments/: 01_get_bg_randomized_concept_vectors.py  02_eval_iou.py  03_eval_cosine_sims_global.py  all_pkl_to_npz.py
notebooks/: check_progress.ipynb  results_analysis.ipynb  results_cosine_sim.ipynb  results_iou.ipynb
scripts/: README.md  download_pascal_voc2012.sh  generate_backgrounds.py  map_classnames_to_wordnet_ids.py  voc2coco.py
