[tool.poetry]
name = "xailib"
version = "0.1.0"
description = "Experiments for measuring background bias of post-hoc concept embeddings"
authors = ["Gesina Schwalbe <gesina.schwalbe@uni-luebeck.de>", "Georgii Mikriukov <georgii.mikriukov@continental-automotive.com>", "Edgar Heinert <heinert@uni-wuppertal.de>", "Annika Mütze <muetze@uni-wuppertal.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
captum = "^0.7.0"
matplotlib = "^3.9.4"
ultralytics = "^8.3.49"
opencv-python = "^4.10.0.84"
scikit-image = "^0.25.2"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
timm = "^1.0.12"
diffusers = "^0.32.2"
torch = "^2.5.1"
torchvision = "^0.21.0"
pytorch-minimize = "^0.0.2"
bokeh = "^3.6.2"
iprogress = "^0.4"
pandas = "^2.2.3"
transformers = "^4.47.1"
pycocotools = "^2.0.8"
umap-learn = "^0.5.7"
gitpython = "^3.1.44"
shapely = "^2.0.7"
argparse-dataclass = "==2.0.0"
aiofiles = "^24.1.0"
aiopath = "^0.7.7"
torchmetrics = "==1.6.1"
robustness = "^1.2.1.post2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
